# tarefas-app

./: .gitignore  CLAUDE.md  atualizacao.py  constantes.py  db.py  main.py  pyproject.toml  release.sh  sync.py
