[project]
name = "tarefas"
version = "1.6.4"
description = "Gerenciador de tarefas offline"
requires-python = ">=3.12"
dependencies = [
    "flet==0.85.3",
]

[tool.flet]
# Identidade do app no Android: pacote vira dev.jhon7bah.tarefas
org = "dev.jhon7bah"
product = "Tarefas"
company = "jhon7bah"

# Mesmo modo de verificação de tipos do Pylance no editor do usuário
[tool.pyright]
typeCheckingMode = "basic"

# PEP 8 verificado com ruff; 88 colunas, o mesmo limite do Flake8 do editor
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N"]

# Internet pro botão "Verificar atualização" consultar o GitHub
[tool.flet.android.permission]
"android.permission.INTERNET" = true

[tool.flet.app]
# Só main.py e assets/ interessam no pacote; sem isso o flet leva a
# .venv, o .git e até o banco local pra dentro do APK (1,8 GB!)
exclude = [
    ".venv",
    ".git",
    ".gitignore",
    ".mypy_cache",
    "__pycache__",
    "tarefas.db",
    "build.tar",
    "CLAUDE.md",
    "requirements.txt",
    "release.sh",
]
